Install always the last version of pgsanity

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.5-alpine
 
 RUN apk add --no-cache postgresql-dev
-RUN pip install pgsanity==0.2.9
+RUN pip install pgsanity
 
 ENTRYPOINT ["/usr/local/bin/pgsanity"]
